@@ -1,3 +1,9 @@
+2007-08-20  Stefan Jahn  <stefan@lkcc.org>
+
+	* dialogs/savedialog.cpp (saveSelectedClicked): Fixed a bug
+	causing the GUI to crash on Win32 when saving selected unsaved
+	schematics at end dialog.
+
 2007-08-16  Stefan Jahn  <stefan@lkcc.org>
 
 	* schematic.cpp (print): Fixed a compile issue which strangely
